--- a/css/theme_dark.css
+++ b/css/theme_dark.css
@@ -1,39 +1,3 @@
-@media (max-width:1170px) {
-
-  #gutter-1 {
-
-    left: 0px !important;
-    margin-left: auto !important;
-  }
-
-  #gutter-2 {
-    right: 0px !important;
-    margin-right: auto !important;
-  }
-}
-
-#gutter-1 {
-  left: 50%;
-  margin-left: -575px;
-  top: 0px;
-  z-index: -1;
-  position: absolute;
-  width: 500px;
-  background-repeat: no-repeat;
-  height: 600px;
-}
-
-#gutter-2 {
-  right: 50%;
-  margin-right: -575px;
-  top: 0px;
-  width: 499px;
-  position: absolute;
-  z-index: -2;
-  height: 610px;
-  background-repeat: no-repeat;
-}
-
 body {
     background-color: black;
 }
@@ -70,16 +34,13 @@ body {
     border: 6px solid #5f99cf;
 }
 
-#channel-list li, #promo-channel li {
-    color: black;
-    font-weight: bold;
-    background: rgba(255,255,255 -.2);
+#channel-list li {
+    color: gray;
 }
 
-#channel-list li:hover, #promo-channel li:hover {
+#channel-list li:hover {
     background-color: #e0e0e0;
     background-color: rgba(256,256,256,0.2);
-    color: white;
 }
 
 #about {
@@ -105,7 +66,7 @@ body {
     color: #5f99cf;
 }
 
-#channel-list .chan-selected, #promo-channel .chan-selected, .chan-selected li:hover {
+#channel-list .chan-selected, .chan-selected li:hover {
     color: darkblue;
     -moz-box-shadow: 5px 5px 5px darkblue;
     -webkit-box-shadow: 5px 5px 5px darkblue;
